tests/fixtures/invalid/bytes_lshift_none.py
# Cannot left shift Bytes and None
x: bytes = b"hello" << None
